# Rectangle

./: .bumpversion.cfg  .cruft.json  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  README.md.rej  pyproject.toml  pyproject.toml.rej
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report.yml.rej  feature_request.yml
.github/workflows/: build.yaml  install_dependencies.R  pipeline.yaml  release.yaml  release_testpypi.yaml  test.yaml
docs/: api.md  conf.py  conf.py.rej  contributing.md  index.md  template_usage.md
docs/notebooks/: example.ipynb
scripts/: rscript.R
src/rectangle/: __init__.py
src/rectangle/pp/: __init__.py  basic.py
src/rectangle/tl/: __init__.py  basic.py
src/rectanglepy/: __init__.py  rectangle.py
src/rectanglepy/data/: hao1_counts_small.csv  small_fino_bulks.csv
src/rectanglepy/pp/: __init__.py  basic.py  create_signature.py  deconvolution.py  optimize_parameter.py  rectangle_signature.py
src/rectanglepy/pp/data/: hao1_annotations_small.csv  small_fino_bulks.csv
src/rectanglepy/tl/: __init__.py  basic.py  deconvolution.py  rectangle.py
tests/: test_basic.py  test_pp.py  test_rectangle.py  test_tl.py
tests/data/: data_stat_log2.csv  df_for_mast.csv  finotello_bulk.csv  finotello_gld.csv  hao1_celltype_annotations_test.csv  hao1_matrix_test.csv  lrTest.csv  quanTIseq_SimRNAseq_mixture_smaller.csv  quanTIseq_SimRNAseq_read_fractions_small.txt  rectangle_result_fino.csv  rectangle_sig_hao1_small  result_stat_log2.csv  signature_hao1.csv
